# practice-6

./: CMakeLists.txt
src/: DataReader.hpp  data.hpp  data_processing.hpp  gps.hpp  main.cpp
utils/: hdf5-to-csv.ipynb
